[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/hyperlog/trackers/tracker_graph.gd" type="Script" id=1]

[node name="logger_graph" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -500.0
rect_min_size = Vector2( 0, 160 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="labels" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 220.0
mouse_filter = 2
custom_constants/separation = 1

[node name="Spacer" type="Control" parent="labels"]
margin_right = 1280.0
margin_bottom = 3.0
rect_min_size = Vector2( 0, 3 )

[node name="name_label" type="Label" parent="labels"]
modulate = Color( 0.584314, 0.584314, 0.584314, 1 )
margin_top = 4.0
margin_right = 1280.0
margin_bottom = 18.0

[node name="max_value" type="Label" parent="labels"]
modulate = Color( 1, 1, 1, 0.156863 )
margin_top = 19.0
margin_right = 1280.0
margin_bottom = 33.0

[node name="min_value" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
